// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots TargetDetails/Stems Multiple Stems 1`] = `
<div
  style={
    Object {
      "fontFamily": "PT Sans Caption",
    }
  }
>
  <ul>
    <li>
      <div>
        Stem Description Two
        <style
          jsx={true}
        >
          
      div {
        margin-top: 1em;
      }
    
        </style>
      </div>
    </li>
    <li>
      <div>
        Stem Description Three
        <style
          jsx={true}
        >
          
      div {
        margin-top: 1em;
      }
    
        </style>
      </div>
    </li>
  </ul>
</div>
`;

exports[`Storyshots TargetDetails/Stems One Stem 1`] = `
<div
  style={
    Object {
      "fontFamily": "PT Sans Caption",
    }
  }
>
  <ul>
    <li>
      <div>
        Stem Description One
        <style
          jsx={true}
        >
          
      div {
        margin-top: 1em;
      }
    
        </style>
      </div>
    </li>
  </ul>
</div>
`;
